feat(Comparable) Use Comparable to compareTo